# tails-adventure

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README.md  meson.build  meson.options  privacy_policy.txt  sources.list  version
.github/workflows/: build.yml  cmake-multi-platform.yml
android/: .gitignore  build.gradle  get_dependencies.sh  setup.sh
android/app/: build.gradle
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/src/: Android.mk  CMakeLists.txt  TA_Error.cpp  TA_Error.h  TA_Game.cpp  TA_Game.h  TA_Globals.h  TA_IntroScreen.cpp  TA_IntroScreen.h  TA_Screen.h  TA_ScreenStateMachine.cpp  TA_ScreenStateMachine.h  TA_Sound.cpp  TA_Sprite.cpp  TA_Sprite.h  TA_Texture.cpp  TA_Time.h  TA_TitleScreen.cpp  TA_TitleScreen.h  TA_Tools.cpp  TA_Tools.h  TA_Touchscreen.cpp  TA_Touchscreen.h  camera.cpp  camera.h  character.cpp  character.h  character_collision.cpp  character_controller.cpp  character_controller.h  character_movement.cpp  controller.cpp  devmenu_screen.h  error.h  explosion.h  font.cpp  game.cpp  game.h  game_screen.cpp  game_screen.h  (+36 more)
app/jni/src/engine/: camera.cpp  camera.h  error.h  font.h  game.cpp  game.h  gamepad.cpp  gamepad.h  geometry.cpp  geometry.h  globals.h  hitbox_container.cpp  keyboard.cpp  keyboard.h  object_set.cpp  object_set.h  pawn.cpp  pawn.h  resource_manager.cpp  screen.h  screen_state_machine.cpp  sound.cpp  sound.h  sprite.cpp  sprite.h  tilemap.cpp  tilemap.h  tools.cpp  tools.h  touchscreen.cpp  touchscreen.h
app/jni/src/game/: character.cpp  character.h  character_controller.cpp  character_controller.h  controller.cpp  controller.h  devmenu_screen.cpp  devmenu_screen.h  game_screen.cpp  game_screen.h  hud.h  intro_screen.cpp  title_screen.cpp
app/jni/src/objects/: bat_robot.cpp  bat_robot.h  bird_walker.cpp  bird_walker.h  bomb.cpp  bomb.h  breakable_block.cpp  breakable_block.h  bridge.cpp  bridge.h  bullet.cpp  bullet.h  dead_kukku.cpp  dead_kukku.h  explosion.cpp  explosion.h  hover_pod.cpp  hover_pod.h  particle.cpp  particle.h  pushable_object.cpp  pushable_object.h  ring.cpp  ring.h  transition.cpp  transition.h  walker.cpp  walker.h
app/jni/src/screens/: game_screen.cpp  game_screen.h  intro_screen.cpp  intro_screen.h  title_screen.h
app/jni/src/screens/game/: character.cpp  character.h  hud.cpp
assets/: default_config  xml2toml
assets/credits/: bird.toml  bird_flip.seq  bird_frame.seq  bird_xpos.seq  bird_ypos.seq  credits.toml  robot.toml  robot_frame.seq  tails_flip.seq  tails_frame.seq  tails_xpos.seq  tails_ypos.seq
assets/data_select/: options_strings.toml
assets/fonts/: area.toml  devmenu.toml  devmenu_selected.toml  item.toml  pause_menu.toml  splash.toml
assets/house/: item_strings.toml
assets/hud/: item_box_strings.toml  items.toml  pause_menu_strings.toml
assets/objects/: anti_air_missile.toml  bat_robot.toml  beehive.toml  beehive.xml  bomb.toml  bomb.xml  bomb_thrower.toml  bomber.toml  fire.toml  (+51 more)
docs/: BUILDING.md  MODDING.md
include/: area_selector.h  camera.h  character.h  controller.h  data_select_screen.h  data_select_section.h  devmenu_screen.h  error.h  filesystem.h  font.h  game.h  game_over_screen.h  game_screen.h  gamepad.h  geometry.h  hitbox_container.h  house_screen.h  hud.h  ingame_map.h  intro_screen.h  inventory_menu.h  keyboard.h  links.h  main_menu_screen.h  main_menu_section.h  map_screen.h  object_set.h  options_menu.h  options_section.h  pause_menu.h  pawn.h  resource_manager.h  save.h  screen.h  screen_state_machine.h  sea_fox.h  sound.h  sprite.h  tilemap.h  title_screen.h  (+2 more)
res/: icon.rc  tails_adventure.desktop
src/: area_selector.cpp  camera.cpp  character.cpp  character_collision.cpp  character_movement.cpp  character_tool.cpp  controller.cpp  data_select_screen.cpp  data_select_section.cpp  devmenu_screen.cpp  filesystem.cpp  font.cpp  game.cpp  game_over_screen.cpp  game_screen.cpp  gamepad.cpp  geometry.cpp  hitbox_container.cpp  house_screen.cpp  hud.cpp  ingame_map.cpp  intro_screen.cpp  inventory_menu.cpp  keyboard.cpp  main.cpp  main_menu_screen.cpp  map_screen.cpp  meson.build  object_set.cpp  onscreen_controller.cpp  options_menu.cpp  options_section.cpp  pause_menu.cpp  pawn.cpp  resource_manager.cpp  save.cpp  screen_state_machine.cpp  sea_fox.cpp  sound.cpp  sources.list  (+5 more)
src/engine/: camera.cpp  camera.h  character.cpp  character.h  character_collision.cpp  character_movement.cpp  character_tool.cpp  controller.cpp  controller.h  defs.h  error.h  filesystem.cpp  filesystem.h  font.cpp  font.h  game.cpp  game_screen.cpp  game_screen.h  gamepad.cpp  gamepad.h  geometry.h  hitbox_container.cpp  hitbox_container.h  keyboard.cpp  keyboard.h  links.h  move_and_collide.cpp  object_set.cpp  object_set.h  onscreen_controller.cpp  resource_manager.cpp  resource_manager.h  save.cpp  screen.h  screen_state_machine.cpp  screen_state_machine.h  sea_fox.cpp  sea_fox.h  sound.cpp  sound.h  (+6 more)
src/objects/: anti_air_missile.cpp  anti_air_missile.h  barrel.cpp  barrel.h  bat_robot.cpp  beehive.cpp  beehive.h  bird_walker.cpp  bird_walker.h  bomb.cpp  bomb.h  bomb_thrower.cpp  bomb_thrower.h  bomber.cpp  bomber.h  breakable_block.cpp  breakable_block.h  bridge.cpp  bridge.h  bullet.cpp  bullet.h  cannon_launcher.cpp  cannon_launcher.h  conveyor_belt.cpp  conveyor_belt.h  cruiser.cpp  cruiser.h  dead_kukku.cpp  dr_fukurokov.cpp  dr_fukurokov.h  drill_mole.cpp  drill_mole.h  electric_barrier.cpp  electric_barrier.h  enemy_bomb.cpp  enemy_bomb.h  enemy_mine.cpp  explosion.cpp  explosion.h  fire.cpp  (+67 more)
src/ui/: area_selector.cpp  area_selector.h  credits_screen.cpp  credits_screen.h  data_select_section.cpp  data_select_section.h  devmenu_screen.cpp  devmenu_screen.h  game_over_screen.cpp  game_over_screen.h  house_screen.h  hud.cpp  hud.h  ingame_map.cpp  ingame_map.h  inventory_menu.cpp  inventory_menu.h  item_ratio_screen.cpp  item_ratio_screen.h  main_menu_screen.cpp  main_menu_screen.h  main_menu_section.h  map_screen.cpp  options_section.cpp  options_section.h  pause_menu.h  title_screen.cpp  title_screen.h
(+228 files in other folders)
