subdir('objects')

sources += files(
    'area_selector.cpp',
    'camera.cpp',
    'character_collision.cpp',
    'character_movement.cpp',
    'character_tool.cpp',
    'character.cpp',
    'controller.cpp',
    'devmenu_screen.cpp',
    'font.cpp',
    'game_over_screen.cpp',
    'game_screen.cpp',
    'game.cpp',
    'gamepad.cpp',
    'geometry.cpp',
    'hitbox_container.cpp',
    'house_screen.cpp',
    'hud.cpp',
    'ingame_map.cpp',
    'intro_screen.cpp',
    'inventory_menu.cpp',
    'keyboard.cpp',
    'main.cpp',
    'map_screen.cpp',
    'object_set.cpp',
    'pawn.cpp',
    'resource_manager.cpp',
    'save.cpp',
    'screen_state_machine.cpp',
    'sound.cpp',
    'sprite.cpp',
    'tilemap.cpp',
    'title_screen.cpp',
    'tools.cpp',
    'touchscreen.cpp'
)
