sources += files(
    'bat_robot.cpp',
    'bird_walker.cpp',
    'bomb_thrower.cpp',
    'bomb.cpp',
    'breakable_block.cpp',
    'bridge.cpp',
    'bullet.cpp',
    'dead_kukku.cpp',
    'drill_mole.cpp',
    'explosion.cpp',
    'fire.cpp',
    'flame.cpp',
    'hover_pod.cpp',
    'item_box.cpp',
    'jumper.cpp',
    'moving_platform.cpp',
    'nezu.cpp',
    'particle.cpp',
    'pushable_object.cpp',
    'ring.cpp',
    'rock_thrower.cpp',
    'speedy.cpp',
    'transition.cpp',
    'walker.cpp',
    'wind.cpp',
    'splash.cpp'
)
